[package]
name = "axhal"
version.workspace = true
edition.workspace = true
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "ArceOS hardware abstraction layer, provides unified APIs for platform-specific operations"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/modules/axhal"
documentation = "https://arceos-org.github.io/arceos/axhal/index.html"

[features]
smp = []
fp_simd = ["axhal_cpu/fp_simd"]
paging = ["axalloc", "page_table_multiarch"]
irq = ["linkme"]
tls = ["axhal_cpu/tls"]
rtc = []
default = []

[dependencies]
log = "=0.4.21"
cfg-if = "1.0"
kernel_guard = "0.1"
lazyinit = "0.2"
percpu = "0.2"
heapless = "0.8"
memory_addr = "0.3"
linkme = { version = "0.3", optional = true }
page_table_multiarch = { version = "0.5", optional = true }
axhal_cpu = { git = "https://github.com/arceos-org/axhal_crates.git" }
axhal_plat = { git = "https://github.com/arceos-org/axhal_crates.git" }
axconfig = { workspace = true }
axalloc = { workspace = true, optional = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "10.0"
tock-registers = "0.9"

[build-dependencies]
axconfig = { workspace = true }
